--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ h1, h2, h3 {
 .header {
     width: 100%;
     height: 95vh;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("./img/background.jpg");
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("./background.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
